Bug 154882 - New Table Styles in Impress does not save font color in top-left cell
Summary: New Table Styles in Impress does not save font color in top-left cell
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.4
Keywords: bibisected, bisected, regression
: 148520 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-04-18 12:18 UTC by Rafael Lima
Modified: 2024-11-14 01:19 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot before closing the file (4.82 KB, image/png)
2023-04-18 12:18 UTC, Rafael Lima
Details
Screenshot after closing and reopening the file (6.73 KB, image/png)
2023-04-18 12:20 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2023-04-18 12:18:04 UTC
When you apply one of the new table styles to a table in Impress, the header row will use a dark background color with white font (which is ok).

But then, when you save the file, close and reopen it, you'll find that the first cell in the table will be black instead of white.

Steps to reproduce:
1) Create a blank Impress file
2) Insert a 4x4 table
3) Fill in the header row (first row)
4) Apply one of the table styles in the sidebar deck (f.i. the one with dark orange header). Notice the header font color will be white.
5) Save the file, close and reopen it
6) Notice that the first cell in the first row is now black; the other header cells are white.

System info

Version: 7.5.2.2 (X86_64) / LibreOffice Community
Build ID: 50(Build:2)
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 4:7.5.2~rc2-0ubuntu0.22.10.1~lo1
Calc: threaded
Comment 1 Rafael Lima 2023-04-18 12:18:58 UTC
Created attachment 186758 [details]
Screenshot before closing the file

This is a screenshot of the table created using the steps above, before closing the file.
Comment 2 Rafael Lima 2023-04-18 12:20:01 UTC
Created attachment 186759 [details]
Screenshot after closing and reopening the file
Comment 3 Rafael Lima 2023-04-18 12:21:02 UTC
@Maxim, any idea why this might be happening?
Comment 5 Rafael Lima 2023-04-20 14:21:55 UTC
(In reply to Maxim Monastirsky from comment #4)
> Wasn't this fixed by
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=f0287aad967761d46cb6903fc0d985a536408176 ?

Hi Maxim, indeed it was fixed in master.

When I reported the bug I was using the official 7.5 release. This patch should be cherry-picked to the 7.5 branch as well.
Comment 6 Xisco Faulí 2023-04-20 14:37:15 UTC
Regression introduced by 

https://cgit.freedesktop.org/libreoffice/core/commit/?id=daab698b346e5e40b67f1e15c796c4e399ccaf8a

author	Maxim Monastirsky <momonasmon@gmail.com>	2022-11-22 14:07:12 +0200
committer	Maxim Monastirsky <momonasmon@gmail.com>	2022-11-29 09:39:22 +0100
commit daab698b346e5e40b67f1e15c796c4e399ccaf8a (patch)
tree 7483cd08e13613e9ff27086cf17d94bbb658e8d1
parent 7830ecc2e4e5dd264517c6554078fa807ff1fceb (diff)
sd: replace hardcoded table styles with xml file
Comment 7 Xisco Faulí 2023-04-20 14:39:07 UTC
(In reply to Rafael Lima from comment #5)
> (In reply to Maxim Monastirsky from comment #4)
> > Wasn't this fixed by
> > https://cgit.freedesktop.org/libreoffice/core/commit/
> > ?id=f0287aad967761d46cb6903fc0d985a536408176 ?
> 
> Hi Maxim, indeed it was fixed in master.
> 
> When I reported the bug I was using the official 7.5 release. This patch
> should be cherry-picked to the 7.5 branch as well.

backported: https://gerrit.libreoffice.org/c/core/+/150716
Closing
Comment 8 Rafael Lima 2023-04-20 14:48:11 UTC
(In reply to Xisco Faulí from comment #7)
> backported: https://gerrit.libreoffice.org/c/core/+/150716

Thanks!
Comment 9 Commit Notification 2023-04-20 19:21:44 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/18ad97d122fbaf7f120502fa73cea773dfe38455

tdf#154882: svx: don't overwrite the first cell's style

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Maxim Monastirsky 2023-04-22 18:31:45 UTC
*** Bug 148520 has been marked as a duplicate of this bug. ***